assets/client/static-assets/css/unitpal.css
/* ... */
        .operations-dashboard .pane > .footer{
            display: flex;
            justify-content: center;
            align-items: center;
            flex-basis: 48px;
            background-color: white;
        }

    .hotel-operations-dashboard .customer-name{
        font-size: 14px;
        color: #7c7c81;
        cursor: pointer;
        max-width: 150px;
    }
    .hotel-operations-dashboard .corporate-customer-name-container {
        padding-top: 3px;
    }
    .hotel-operations-dashboard .corporate-customer-name{
        font-size: 12px;
        color: black;
        max-width: 150px;
    }

    .hotel-operations-dashboard .room-type{
        font-size: 12px;
        color: #a9a9ac;
        width: 150px;
        padding-top: 6px;
    }

    .hotel-operations-dashboard .period{
            display: flex;
            flex-direction: row;
            color: #7c7c81
        }

        .remove-auto-border{
            border: 0px;
        }
        .remove-auto-border:focus{
            outline: none !important;
            border: 0px !important;
        }

        .pane > .body{
            height: 100px;
            flex-grow: 1;
        }

        arrivals-pane > .footer .th-button-box{
            color: rgb(251, 103, 8);
        }

    .hotel-operations-dashboard .rooms-filter {
        color: #7c7c81;
    }

    .rooms-controller {
        color: #5b5b62;
    }

    rooms-canvas {
        background-color: #eeeeee;
        flex-basis: 100px;
        flex-grow: 8;
        border-left: 1px solid #DBDBDB;
        border-right: 1px solid #DBDBDB;
    }

    rooms-canvas > .header{
        background-color: white;
    }

    rooms-canvas > .header > .rooms-controller{
        height: 48px;
        background-color: white;
        border-bottom: 1px solid #DBDBDB;
        display: flex;
        align-items: center;
        justify-content: center;
    }

    rooms-canvas > .header > .notification{
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        height: 48px;
        color: white;
    }

    rooms-canvas > .header > .notification .notification-message{
        text-align: center;
        flex-grow: 1;
    }

    rooms-canvas > .header > .notification .notification-close{
        flex-basis: 32;
        flex-grow: 0;
        padding: 12px;
    }

    rooms-canvas .body {
        overflow-y: hidden;
        height: calc(100% - 81px);
    }
    .rooms-canvas-upper {
        height: 16px;
        width: 100%;
    }
    .rooms-canvas-lower {
        height: 16px;
        width: 100%;
    }

        /* Room cards */

        /* Occupied */
        .room-card.occupied {
            border-left: 6px solid rgb(251, 103, 8);
            line-height: normal;
        }

        .room-card.occupied .card-header .section1 .room-number{
            color: rgb(251, 103, 8);
        }

        /* Free */
        .room-card.free {
            border-left: 6px solid rgb(29, 205, 140);
        }

        .room-card.free .card-header .section1 .room-number{
            color: rgb(29, 205, 140);
        }

        /*Out of service */
        .room-card.out-of-service {
            border-left: 6px solid #555;
        }

        .room-card.out-of-service .card-header .section1 .room-number{
            color: #555;
        }

        /*Out of order */
        .room-card.out-of-order {
            border-left: 6px solid #9A9A9A;
        }

        .room-card.out-of-order .card-header .section1 .room-number{
            color: #9A9A9A;
        }

        /* Reseved */
        .room-card.reserved {
            border-left: 6px solid rgb(255, 190, 1);
        }

        .room-card.reserved .card-header .section1 .room-number{
            color: rgb(255, 190, 1);
        }

        .room-card .info-icon {
            padding-left: 3px;
        }

        .page{
            width: 500px;
            height: 500px;
            background-color: #cfd6d9;
        }

        .rooms-canvas {
            flex-wrap: wrap;
            align-content: flex-start;
        }

        .room-card {
            cursor: default;
            height: 120px;
            width: 216px;
            background-color: white;
            display: flex;
            flex-direction: column;
            margin-left: 6px;
            margin-top: 6px;
            flex-shrink: 0;
            border-radius: 3px;
            border-top: 2px solid #b9b9b9;
            border-right: 2px solid #b9b9b9;
            border-bottom: 2px solid #b9b9b9;
        }

        .ghost{
            opacity: 0.5
        }

        .room-card.accepts-drop{
            opacity: 1 !important;
            background-color: #e9ffe9;
        }

        .room-card.tick-border{
            border-top: 3px solid;
            border-right: 3px solid;
            border-bottom: 3px solid;
        }

        .room-card.free.tick-border{
            border-color: rgb(29, 205, 140);
        }

        .room-card.reserved.tick-border{
            border-color: rgb(255, 190, 1);
        }

        .room-card.free.highlight-for-drop{
            background-color: #ccffec;
        }

        .room-card.free.hover{
            background-color: #97fcd6;
        }

        .room-card.reserved.highlight-for-drop{
            background-color: #fff7cc;
        }

        .room-card.reserved.hover{
            background-color: #ffeca8;
        }

        .room-card .card-header{
           padding: 6px 12px 6px 12px;
        }

        .room-card .card-header .section1{
            display: flex;
            flex-direction: column;
            flex-grow: 1;
        }

            .room-card .card-header .section1 .room-number{
                font-size: 24px;
                max-width: 150px;
            }

        .room-card .card-header .section2{
            display: flex;
            flex-direction: row;
            justify-content: space-between;
        }
/* ... */

